--- a/boramjul/mypage.css
+++ b/boramjul/mypage.css
@@ -1,27 +1,73 @@
 @charset "UTF-8";
+*{
+    margin: 0;
+    padding: 0;
+}
 
-#my_line{
-    background-color: #664B8E;
+.menu:hover{
+    transform:scale(1.1);
+}
+
+.wrap{
     width: 100%;
-    height: 195px;
-    position: relative;
 }
 
-#mypage{
-    font-size: 64px;
-    color: whitesmoke;
-    float: left;
-    bottom: 60px;
-    left: 85px;
-    position: absolute;
-
+.box{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 300px;
 }
 
-#mypage2{
-    font-size: 24px;
+.menu_name{
+    width: 300px;
+    margin-top: 100px;
+    margin-left: 500px;
+}
+
+.menu_name p{
     font-weight: bold;
-    color: whitesmoke;
-    position: absolute;
-    bottom: 30px;
-    left: 400px;
+    font-size: 30px;
+    margin-bottom: 10px;
 }
+
+.table table{
+    margin: 0 auto 0 400px;
+    border-collapse: collapse;
+    width: 70%;
+}
+
+.table tr {
+    border: solid 1px #A1A1A1;
+    text-align:center;
+    height: 200px;
+    border-left: 0;
+    border-right: 0;
+}
+
+.table tr td{
+    width: 20%;
+}
+
+.table tr td:first-child{
+    width: 5%;
+}
+
+.table tr img{
+    width: 100px;
+    height: 145px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
