--- a/boramjul/mypage.css
+++ b/boramjul/mypage.css
@@ -10,34 +10,37 @@
 
 .wrap{
     width: 100%;
+    position: relative;
 }
 
 .box{
     width: 100%;
-    height: 100%;
-    margin-bottom: 300px;
+    height: 3000px;
 }
 
 .menu_name{
-    width: 300px;
+    width: 800px;
     margin-top: 100px;
-    margin-left: 500px;
+    margin-left: 200px;
+    display: inline-block;
 }
 
 .menu_name p{
     font-weight: bold;
     font-size: 30px;
     margin-bottom: 10px;
+    display: inline-block;
 }
 
 .table table{
-    margin: 0 auto 0 400px;
+    margin: 0 auto 0 350px;
     border-collapse: collapse;
     width: 70%;
+    border-spacing: 0;
 }
 
 .table tr {
-    border: solid 1px #A1A1A1;
+    border: solid 2px #A1A1A1;
     text-align:center;
     height: 200px;
     border-left: 0;
@@ -46,19 +49,180 @@
 
 .table tr td{
     width: 20%;
+    font-size: 17px;
 }
 
 .table tr td:first-child{
     width: 5%;
 }
+.table tr td:nth-child(2){
+    width: 5%;
+}
+.table tr td:nth-child(3){
+    width: 10%;
+}
+.table tr td:last-child{
+    width: 10%;
+}
 
-.table tr img{
+
+.bookimg{
     width: 100px;
     height: 145px;
 }
 
+.review_btn{
+    appearance: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    background: #664B8E;
+    color: aliceblue;
+    width: 125px;
+    height: 40px;
+    transition: 0.5s;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
 
+.num_btn{
+    appearance: none;
+    text-decoration: none;
+    border: none;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    font-size: 23px;
+    float: left;
+    background-color: rgb(231, 231, 231);
+}
 
+.num_btn:focus{
+    outline: none;
+}
+
+.num_input{
+    height: 25px;
+    text-align: center;
+    float: left; 
+    border: 0;
+}
+
+.num{
+    margin: 0 auto;
+    border: solid 1px rgb(231, 231, 231);
+    border-right: 0;
+    display: inline-block;
+}
+
+.check{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+}
+
+#tot p{
+    font-size: 35px;
+    text-align: center;
+    line-height: 100px;
+}
+
+#cart_btn{
+    text-align: center;
+}
+
+#delBtn{
+    appearance: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    background: #434CA5;
+    color: aliceblue;
+    width: 350px;
+    height: 75px;
+    font-size: 36px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+#buyBtn{
+    appearance: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    background: #664B8E;
+    color: aliceblue;
+    width: 350px;
+    height: 75px;
+    margin-left: 100px;
+    font-size: 36px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+#delBtn:focus{
+    outline: none;
+}
+
+#buyBtn:focus{
+    outline: none;
+}
+
+.review{
+    cursor: pointer;
+    color: black;
+    text-decoration:none;
+    display: block;
+}
+
+.review:hover{
+    text-decoration: underline; 
+    color: black;
+}
+
+.star{
+    height: 20px;
+}
+
+/*탭*/
+.tabs section {
+    display: none;
+}
+
+.tabs input {
+    display: none;
+}
+
+.tabs label {
+    display: inline-block;
+    font-weight: 600;
+}
+
+.tabs label:hover {
+    cursor: pointer;
+    transform:scale(1.1);
+}
+
+.tabs input:checked + label {
+    font-weight: bolder;
+    color: #2040B5;
+}
+
+#myReview:checked ~ #content1,
+#myReply:checked ~ #content2{
+    display: block;
+}
 
 
 
