--- a/boramjul/mypage.css
+++ b/boramjul/mypage.css
@@ -65,13 +65,12 @@
     width: 10%;
 }
 
-
 .bookimg{
     width: 100px;
     height: 145px;
 }
 
-.review_btn{
+.reviewBtn{
     appearance: none;
     text-align: center;
     text-decoration: none;
@@ -88,7 +87,11 @@
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.num_btn{
+.reviewBtn:focus{
+    outline:none;
+}
+
+.numBtn{
     appearance: none;
     text-decoration: none;
     border: none;
@@ -100,7 +103,7 @@
     background-color: rgb(231, 231, 231);
 }
 
-.num_btn:focus{
+.numBtn:focus{
     outline: none;
 }
 
@@ -222,6 +225,112 @@
 #myReview:checked ~ #content1,
 #myReply:checked ~ #content2{
     display: block;
+}
+
+.menu_line{
+    margin-top: 10px;
+    border-top: solid 1px #A1A1A1;
+    margin-left: 350px;
+    width: 70%;
+}
+
+#info_box{
+    border: solid 1px #A1A1A1;
+    margin-left: 500px;
+    margin-top: 35px;
+    width: 55%;
+    height: 1200px;
+}
+
+#info_table{
+    width: 100%;
+    margin-top:30px;
+    margin-left: 70px;
+}
+
+#info_table input{
+    margin-bottom: 35px;
+    width: 350px;
+    height: 60px;
+    border-radius: 10px;
+    font-size: 20px;
+    padding-left: 20px;
+    border: solid 1px #A8A8A8;
+}
+
+
+#info_table input:focus{
+    outline:none;
+    border: solid 3px black;
+}
+
+#info_table td{
+    font-size: 20px;
+    line-height: 40px;
+}
+
+#infoBtn{
+    appearance: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    background: #434CA5;
+    color: aliceblue;
+    width: 370px;
+    height: 75px;
+    font-size: 36px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+
+#infoBtn:focus{
+    outline: none;
+}
+
+#point_system{
+    font-size: 25px;
+    display: inline-block;
+
+}
+
+.point_system{
+    padding-left: 100px;
+    display: inline-block;
+    font-size: 30px;
+    vertical-align: 50px;
+}
+
+
+#myPoint{
+    font-style: italic;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+#info_box img{
+    width: 170px;
+    height: 170px;
+    display: inline-block;
+}
+
+#bronze{
+    margin-top: 50px;
+    width: 80%;
+    display: table;
+}
+
+#silver,#gold{
+    width: 80%;
+    display: table;
+    margin-top: 100px;
+}
+
+#myTier{
+    font-size: 18px;
 }
 
 
