--- a/boramjul/css/ChangePWD.css
+++ b/boramjul/css/ChangePWD.css
@@ -2,32 +2,21 @@
 
 @font-face {
     font-family: "logofont";
-    src: url("/boramjul/fonts/parisienne_regular.ttf");
+    src: url("../fonts/parisienne_regular.ttf");
 }
 @font-face{
     font-family: "mainfont";
-    src: url("/boramjul/fonts/GmarketSansMedium.otf");
+    src: url("../fonts/GmarketSansMedium.otf");
 }
 @font-face {
     font-family: "detailfont";
-    src: url("/boramjul/fonts/GmarketSansLight.otf");
+    src: url("../fonts/GmarketSansLight.otf");
 }
 @font-face{
     font-family: "btn";
-    src:url("/boramjul/fonts/nanumbarungothic.ttf")
+    src:url("../fonts/nanumbarungothic.ttf")
 }
-#box1{
-    position: absolute;
-    width: 700px;
-    height: 750px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-   
-    border: 1px solid #A1A1A1;
-    box-sizing: border-box;
-    border-radius: 10px;
-}
+
 #logohead1{
     position: absolute;
     width: 54px;
@@ -52,7 +41,50 @@
 
     color: #000000;
 }
+#box1{
+    position: absolute;
+    width: 700px;
+    height: 700px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+   
+    border: 1px solid #A1A1A1;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+#name{
+    position: absolute;
+    width: 205px;
+    height: 21px;
+    top: 250px;
+    left: 110px;
+    text-align: center;
 
+    font-family:  "detailfont";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    /* identical to box height */
+    color: #000000;
+}
+#email{
+    position: absolute;
+    width: 205px;
+    height: 21px;
+    left: 130px;
+    top: 370px;
+    text-align: center;
+
+    font-family:  "detailfont";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    /* identical to box height */
+    color: #000000;
+}
 #main{
     position: absolute;
     width: 350px;
@@ -64,30 +96,7 @@
     font-family: "mainfont";
     font-style: normal;
     font-weight: bold;
-    font-size: 27px;
-    line-height: 21px;
-    /* identical to box height */
-    color: #000000;
-}
-#chk{
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    left: 320px;
-    top: 270px;
-}
-#name{
-    position: absolute;
-    width: 400px;
-    height: 21px;
-    top: 400px;
-    left: 160px;
-    text-align: center;
-
-    font-family: "detailfont";
-    font-style: normal;
-    font-weight: bold;
-    font-size: 28px;
+    font-size: 25px;
     line-height: 21px;
     /* identical to box height */
     color: #000000;
@@ -98,7 +107,7 @@
     width: 500px;
     height: 64px;
     left: 110px;
-    top: 600px;
+    top: 550px;
     font-family: "btn";
 
     background: #664B8E;
