--- a/boramjul/css/join.css
+++ b/boramjul/css/join.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: "logofont";
-    src: url("/boramjul/fonts/parisienne_regular.ttf");
+    src: url("../fonts/parisienne_regular.ttf");
 }
 
 #box1{
