--- a/boramjul/css/main.css
+++ b/boramjul/css/main.css
@@ -31,7 +31,10 @@
 
 .box{
     width: 100%;
-    height: 3400px;
+}
+
+.footer{
+    margin-top: 30%;
 }
 
 #wrapper {
@@ -83,6 +86,10 @@
     padding-right:10px;
 }
 
+#slider img{
+    width: 100%;
+}
+
 .pagination {
     float:left; 
     list-style:none; 
@@ -114,15 +121,8 @@ li.current {
     background:#664B8E;
     width: 30px;
 }
-/*
-@media only screen and (max-width: 300px) {
-    body{
-        width: 40%;
-        font-size: 15px;
-    }
-}*/
 
-#best-container{
+#best-container,#new-container{
     margin-top: 200px;
 }
 
@@ -140,6 +140,7 @@ li.current {
 
 #best-back, #new-back{
     margin-top: 50px;
+    text-align: center;
 }
 
 #best-back img{
@@ -147,24 +148,20 @@ li.current {
 }
 
 #new-container{
-    margin-top: 200px;
-}
-
-#new-back #bookImg{
-    width: 1280px;
-    margin: 0 auto;
+    position: relative;
 }
 
 #new-back #bookImg img{
-    width: 250px;
-    height: 350px;
+    width: 17%;
+    height: 7%;
 }
 
 .more{
-    margin-top: 15px;
+    margin-top: 10px;
     font-weight: bold;
     color: #202020;
     font-family: "gilroy";
-    margin-left:48%;
+    margin-left:1%;
+    display: block;
 }
 
