--- a/boramjul/css/mypage.css
+++ b/boramjul/css/mypage.css
@@ -67,14 +67,40 @@ a{
 
 .box{
     width: 100%;
-    height: 3400px;
+}
+
+.footer{
+    margin-top: 30%;
+}
+
+#myMenu{
+    width: 20%;
+    display: inline-block;
+    float: left;
+}
+
+#mypage{
+    font-size: 64px;
+    color: white;
+    font-weight: bold;
+    margin-left:3%;
+    display: inline-block;
+    margin-top: 5%;
+    font-family: "gilroy";
+}
+
+#mypage2{
+    font-size: 20px;
+    color: white;
+    margin-left: 5%;
+    font-family: "nanum";
 }
 
 .menu_name{
-    width: 800px;
-    margin-top: 100px;
-    margin-left: 200px;
+    margin-top: 7%;
+    margin-left: 10%;
     display: inline-block;
+    margin-right: 37%;
 }
 
 .menu_name p{
@@ -85,10 +111,18 @@ a{
     display: inline-block;
 }
 
+.my_line{
+    background-color: #664B8E;
+    height: 195px;
+}
+
+.table{
+    margin-left: 25%;
+}
+
 .table table{
-    margin: 0 auto 0 350px;
     border-collapse: collapse;
-    width: 70%;
+    width: 90%;
     border-spacing: 0;
 }
 
@@ -177,7 +211,6 @@ a{
     width: 350px;
     height: 75px;
     font-size: 36px;
-
 }
 
 #buyBtn{
@@ -221,23 +254,24 @@ a{
     display: block;
 }
 
+
 .menu_line{
-    margin-top: 10px;
-    border-top: solid 1px #A1A1A1;
-    margin-left: 350px;
-    width: 70%;
+    margin: 1% 3%;
+    border-top: solid 2px #A1A1A1;
+    width: 60%;
+    display: inline-block;
 }
 
 #info_box{
     border: solid 1px #A1A1A1;
-    margin-left: 500px;
-    margin-top: 35px;
-    width: 55%;
+    width: 45%;
     height: 1200px;
+    display: inline-block;
+    margin: 1% 10%;
 }
 
 #info_table{
-    width: 100%;
+    width: 60%;
     margin-top:30px;
     margin-left: 70px;
 }
@@ -271,7 +305,6 @@ a{
 
 #point_system{
     font-size: 25px;
-    display: inline-block;
 }
 
 .point_system{
@@ -294,15 +327,13 @@ a{
 }
 
 #bronze{
-    margin-top: 50px;
-    width: 80%;
+    margin-top: 5%;
     display: table;
 }
 
 #silver,#gold{
-    width: 80%;
     display: table;
-    margin-top: 100px;
+    margin-top: 10%;
 }
 
 #myTier{
@@ -314,15 +345,4 @@ a{
     width: 100%;
     height: 700px;
 }
-
-
-
-
-
-
-
-
-
-
-
 
