회원가입,css변경

--- a/boramjul/css/changeOK.css
+++ b/boramjul/css/changeOK.css
@@ -14,7 +14,7 @@
 }
 @font-face{
     font-family: "btn";
-    src:url("../fonts/nanumbarungothic.ttf")
+    src:url("../fonts/GmarketSansMedium.otf")
 }
 #box1{
     position: absolute;
