--- a/boramjul/css/join.css
+++ b/boramjul/css/join.css
@@ -4,13 +4,26 @@
     font-family: "logofont";
     src: url("../fonts/parisienne_regular.ttf");
 }
+@font-face{
+    font-family: "mainfont";
+    src: url("../fonts/GmarketSansMedium.otf");
+}
+@font-face {
+    font-family: "detailfont";
+    src: url("../fonts/GmarketSansLight.otf");
+}
+@font-face{
+    font-family: "btn";
+    src:url("../fonts/GmarketSansMedium.otf")
+}
 
 #box1{
     position: absolute;
     width: 700px;
     height: 900px;
-    left: 550px;
-    top: 53px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 
     border: 1px solid #A1A1A1;
     box-sizing: border-box;
@@ -27,7 +40,7 @@
     position: absolute;
     width: 254px;
     height: 70px;
-    left: 260px;
+    left: 250px;
     top: 30px;
 
     font-family: "logofont";
@@ -48,23 +61,27 @@
     top:100px;
     margin-top:10px;
     margin-left: 70px;
+    font-family: "detailfont";
 }
 
 #info_table input{
     margin-bottom: 1px;
     width: 350px;
-    height: 60px;
-    border-radius: 10px;
+    height: 40px;
     font-size: 20px;
-    padding-left: 20px;
+    padding-left: 10px;
+    font-family: "detailfont";
 }
 
 #info_table td{
     font-size: 20px;
-    line-height: 40px;
+    line-height: 30px;
+    font-family: "mainfont";
 }
 
 #infoBtn{
+    position: absolute;
+    top: 680px;
     appearance: none;
     text-align: center;
     text-decoration: none;
@@ -78,6 +95,6 @@
     width: 370px;
     height: 75px;
     font-size: 36px;
-    font-weight: bold;
+    font-family: "btn";
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
