--- a/boramjul/css/joinok.css
+++ b/boramjul/css/joinok.css
@@ -16,7 +16,18 @@
     font-family: "btn";
     src:url("../fonts/GmarketSansMedium.otf")
 }
-
+#box1{
+    position: absolute;
+    width: 700px;
+    height: 750px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+   
+    border: 1px solid #A1A1A1;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
 #logohead1{
     position: absolute;
     width: 54px;
@@ -41,34 +52,6 @@
 
     color: #000000;
 }
-#box1{
-    position: absolute;
-    width: 700px;
-    height: 750px;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-   
-    border: 1px solid #A1A1A1;
-    box-sizing: border-box;
-    border-radius: 10px;
-}
-#name{
-    position: absolute;
-    width: 300px;
-    height: 21px;
-    top: 350px;
-    left: 210px;
-    text-align: center;
-
-    font-family: detailfont;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 35px;
-    line-height: 21px;
-    /* identical to box height */
-    color: #000000;
-}
 
 #main{
     position: absolute;
@@ -81,6 +64,29 @@
     font-family: "mainfont";
     font-style: normal;
     font-weight: bold;
+    font-size: 27px;
+    line-height: 21px;
+    /* identical to box height */
+    color: #000000;
+}
+#chk{
+    position: absolute;
+    width: 80px;
+    height: 80px;
+    left: 320px;
+    top: 270px;
+}
+#name{
+    position: absolute;
+    width: 400px;
+    height: 21px;
+    top: 400px;
+    left: 160px;
+    text-align: center;
+
+    font-family: "detailfont";
+    font-style: normal;
+    font-weight: bold;
     font-size: 25px;
     line-height: 21px;
     /* identical to box height */
@@ -89,24 +95,12 @@
 #btn{
     
     position: absolute;
-    width: 200px;
+    width: 500px;
     height: 64px;
-    left: 100px;
+    left: 110px;
     top: 600px;
     font-family: "btn";
 
     background: #664B8E;
-    border-radius: 10px;
-}
-#btn2{
-    
-    position: absolute;
-    width: 200px;
-    height: 64px;
-    left: 400px;
-    top: 600px;
-    font-family: "btn";
-
-    background: #434CA5;
     border-radius: 10px;
 }
