--- a/boramjul/css/main.css
+++ b/boramjul/css/main.css
@@ -20,6 +20,88 @@
     src: url("../fonts/nanumbarungothic.ttf");
 }
 
+@media (max-width:900px) {
+    .wrap .box #wrapper {
+        width:100%; 
+        height:170px; 
+    }
+    .wrap .box #wrapper #slider {
+        height:170px; 
+        width:100%; 
+    }
+    .wrap .box #wrapper #slider li{
+        width:375px; 
+        height:100%; 
+        padding-right:1235px;
+    }
+    .wrap .box #wrapper #slider li img{
+        width:100%; 
+        height:100%; 
+    }
+    .wrap .box #wrapper #sliderBtn1{
+        top:90px;
+    }
+    .wrap .box #wrapper #sliderBtn2{
+        top:90px;
+    }
+
+    .wrap .box #wrapper .pagination{
+        bottom: 5px;
+        margin-left: 45%;
+    }
+    .wrap .box #wrapper .pagination li{
+        width: 6px;
+        height: 6px;
+        border:1px solid white; 
+        background:white;
+    }
+    .wrap .box #wrapper .pagination li:first-child{
+        border: 0;
+        width: 6px;
+        height: 6px;
+        border:1px solid white; 
+    }
+    .wrap .box #wrapper .pagination li.current{
+        width: 20px;
+        background:#664B8E;
+        border:1px solid #664B8E; 
+    }
+
+    .wrap .box #best-container p:first-child{
+        font-size: 17px;
+        margin-bottom: 5px;
+    }
+
+    .wrap .box #best-container {
+        margin-top: 50px;
+    }
+
+    .wrap .box #new-container{
+        margin-top: 50px;
+    }
+
+    .wrap .box #new-container p:first-child{
+        font-size: 17px;    
+        margin-bottom: 5px;
+    }
+    .wrap .box #new-container #new-back{
+        margin-top: 10px;
+    }
+    .wrap .box #best-container #best-back{
+        margin-top: 10px;
+    }
+    .wrap #header #main_menu li:first-child{
+        display: none;
+    }
+    .wrap #header #main_menu ul li{
+        width: 20%;
+    }
+           
+
+
+}/*media*/
+
+
 .menu:hover{
     transform:scale(1.1);
 }
@@ -44,7 +126,6 @@
 }
 
 .sliderbutton {
-    /*float:left;*/
     width:32px;
     height: 38px;
 }
