--- a/boramjul/css/mypage.css
+++ b/boramjul/css/mypage.css
@@ -4,30 +4,157 @@
     margin: 0;
     padding: 0;
 }
-
 @font-face {
     font-family: "gilroy";
     src: url("../fonts/gilroy_light.otf");
 }
-
 @font-face {
     font-family: "gmarket";
     src: url("../fonts/GmarketSansMedium.otf");
 }
-
 @font-face {
     font-family: "nanum";
     src: url("../fonts/nanumbarungothic.ttf");
 }
-
+@media (max-width:900px) {
+    .wrap .box .my_line{
+        display: none;
+    }
+    .wrap .box  #myMenu{
+        display: none;
+        width: 100%;
+    }
+    .wrap .box .menu_line{
+        width: 100%;
+    }
+    .wrap .box .menu_name p{
+        font-size: 15px;
+        margin-bottom: 0px;
+    }
+    .wrap .box .table{
+        margin-left: 0;
+    }
+    .wrap .box .table table{
+        width: 100%;
+    }
+    .wrap .box .table table tr{
+        height: 110px;
+    }
+    .wrap .box .table table tr td{
+        font-size: 10px;
+    }
+    .wrap .box .table table tr td .bookimg{
+        width: 65px;
+        height: 100px;
+    }
+    .wrap .box .table table tr td .star{
+        width: 30px;
+        height: 7px;
+    }
+    .wrap .box .table table tr td .reviewBtn{
+        width: 50px;
+        font-size: 7px;
+        height: 20px;
+        border-radius: 7px;
+    }
+    .wrap .box #tot p{
+        font-size: 20px;
+        line-height: 2;
+    }
+    .wrap .box #cart_btn #delBtn{
+        width: 120px;
+        height: 35px;
+        font-size: 20px;
+    }
+    .wrap .box #cart_btn #buyBtn{
+        width: 120px;
+        margin-left: 0px;
+        margin-top: 5px;
+        height: 35px;
+        font-size: 20px;
+    }
+    .wrap .box #info_box{
+        width: 100%;
+        height: 500px;
+        margin: 0;
+        border: 0;
+    }
+    .wrap .box #info_box #info_table{
+        margin: 10px auto;
+    }
+    .wrap .box #info_box #info_table tr td{
+        font-size: 13px;
+        line-height: 25px;
+    }
+    .wrap .box #info_box #info_table tr td input{
+        margin-bottom: 0px;
+        width: 200px;
+        height: 35px;
+        font-size: 10px;
+    }
+    .wrap .box #info_box #info_table tr td #infoBtn{
+        font-size: 20px;
+        background: #434CA5;
+        width: 225px;
+        height: 45px;
+        margin-top: 10px;
+    }
+    .wrap .box #info_box #point_system{
+        font-size: 12px;
+        margin-left: 30px;
+    }
+    .wrap .box #info_box #myPoint{
+        font-size: 18px;
+    }
+    .wrap .box #info_box #myTier{
+        font-size: 12px;
+        margin-left: 30px;
+    }
+    .wrap .box #info_box #bronze {
+        margin-top: 10px;
+    }
+    .wrap .box #info_box #silver {
+        margin-top: 10px;
+    }
+    .wrap .box #info_box #gold {
+        margin-top: 10px;
+    }
+    .wrap .box #info_box #bronze img{
+        margin-left: 30px;
+        width: 100px;
+        height: 100px;
+    }
+    .wrap .box #info_box #silver img{
+        margin-left: 30px;
+        width: 100px;
+        height: 100px;
+    }
+    .wrap .box #info_box #gold img{
+        margin-left: 30px;
+        width: 100px;
+        height: 100px;
+    }
+    .wrap .box #info_box .point_system{
+        font-size: 15px;
+        padding-left: 20px;
+        vertical-align: 35px;
+    }
+    .wrap .box .tabs label{
+        font-size: 8px;
+    }
+    .wrap #footer{
+        display: none;
+    }
+    .wrap .box {
+        margin-bottom: 100px;
+    }
+}
 p{
     font-family: "nanum";
 }
-
 table{
     font-family: "nanum";
 }
-
 button{
     appearance: none;
     text-align: center;
@@ -41,44 +168,35 @@ button{
     display: inline-block;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
-
 input{
     text-align: center;
     border-radius: 10px;
 }
-
 input:focus{
     outline: none;
 }
-
 a{
     color: black;
     text-decoration:none;
 }
-
-.menu:hover{
+.topmenu:hover{
     transform:scale(1.1);
 }
-
 .wrap{
     width: 100%;
     position: relative;
 }
-
 .box{
     width: 100%;
 }
-
 .footer{
     margin-top: 30%;
 }
-
 #myMenu{
     width: 20%;
     display: inline-block;
     float: left;
 }
-
 #mypage{
     font-size: 64px;
     color: white;
@@ -88,21 +206,18 @@ a{
     margin-top: 5%;
     font-family: "gilroy";
 }
-
 #mypage2{
     font-size: 20px;
     color: white;
     margin-left: 5%;
     font-family: "nanum";
 }
-
 .menu_name{
     margin-top: 7%;
     margin-left: 10%;
     display: inline-block;
     margin-right: 37%;
 }
-
 .menu_name p{
     font-family: "gilroy";
     font-weight: bold;
@@ -110,22 +225,18 @@ a{
     margin-bottom: 10px;
     display: inline-block;
 }
-
 .my_line{
     background-color: #664B8E;
     height: 195px;
 }
-
 .table{
     margin-left: 25%;
 }
-
 .table table{
     border-collapse: collapse;
     width: 90%;
     border-spacing: 0;
 }
-
 .table tr {
     border: solid 2px #A1A1A1;
     text-align:center;
@@ -133,12 +244,10 @@ a{
     border-left: 0;
     border-right: 0;
 }
-
 .table tr td{
     width: 20%;
     font-size: 17px;
 }
-
 .table tr td:first-child{
     width: 5%;
 }
@@ -151,19 +260,16 @@ a{
 .table tr td:last-child{
     width: 10%;
 }
-
 .bookimg{
     width: 100px;
     height: 145px;
 }
-
 .reviewBtn{
     font-size: 24px;
     background: #664B8E;
     width: 125px;
     height: 40px;
 }
-
 .numBtn{
     border-radius: 0;
     color: black;
@@ -175,36 +281,30 @@ a{
     box-shadow: none;
     background-color: rgb(231, 231, 231);
 }
-
 .num_input{
     height: 25px;
     float: left; 
     border: 0;
 }
-
 .num{
     margin: 0 auto;
     border: solid 1px rgb(231, 231, 231);
     border-right: 0;
     display: inline-block;
 }
-
 .check{
     display: inline-block;
     width: 20px;
     height: 20px;
 }
-
 #tot p{
     font-size: 35px;
     text-align: center;
     line-height: 100px;
 }
-
 #cart_btn{
     text-align: center;
 }
-
 #delBtn{
     font-size: 24px;
     background: #434CA5;
@@ -212,7 +312,6 @@ a{
     height: 75px;
     font-size: 36px;
 }
-
 #buyBtn{
     font-size: 24px;
     background: #664B8E;
@@ -221,47 +320,37 @@ a{
     margin-left: 100px;
     font-size: 36px;
 }
-
 .star{
     height: 20px;
 }
-
 .tabs section {
     display: none;
 }
-
 .tabs input {
     display: none;
 }
-
 .tabs label {
     display: inline-block;
     font-weight: 600;
 }
-
 .tabs label:hover {
     cursor: pointer;
     transform:scale(1.1);
 }
-
 .tabs input:checked + label {
     font-weight: bolder;
     color: #2040B5;
 }
-
 #myReview:checked ~ #content1,
 #myReply:checked ~ #content2{
     display: block;
 }
-
-
 .menu_line{
     margin: 1% 3%;
     border-top: solid 2px #A1A1A1;
     width: 60%;
     display: inline-block;
 }
-
 #info_box{
     border: solid 1px #A1A1A1;
     width: 45%;
@@ -269,13 +358,11 @@ a{
     display: inline-block;
     margin: 1% 10%;
 }
-
 #info_table{
     width: 60%;
     margin-top:30px;
     margin-left: 70px;
 }
-
 #info_table input{
     margin-bottom: 35px;
     width: 350px;
@@ -285,16 +372,13 @@ a{
     border: solid 1px #A8A8A8;
     text-align: left;
 }
-
 #info_table input:focus{
     border: solid 3px black;
 }
-
 #info_table td{
     font-size: 20px;
     line-height: 40px;
 }
-
 #infoBtn{
     font-size: 24px;
     background: #434CA5;
@@ -302,44 +386,36 @@ a{
     height: 75px;
     font-size: 36px;
 }
-
 #point_system{
     font-size: 25px;
 }
-
 .point_system{
     padding-left: 100px;
     display: inline-block;
     font-size: 30px;
     vertical-align: 50px;
 }
-
 #myPoint{
     font-style: italic;
     font-weight: bold;
     font-size: 36px;
 }
-
 #info_box img{
     width: 170px;
     height: 170px;
     display: inline-block;
 }
-
 #bronze{
     margin-top: 5%;
     display: table;
 }
-
 #silver,#gold{
     display: table;
     margin-top: 10%;
 }
-
 #myTier{
     font-size: 25px;
 }
-
 #event{
     background-image: url(../images/event.svg);
     width: 100%;
