db구조 수정 사항
제가 맡고있는 페이지 관련 디비 테이블과, 그냥 눈에 보이는 다른분들 디비테이블 수정 관련 작성해서 커밋합니다. 제가 맡지않은 페이지는 잘 몰라서 기성님과 담당자분 상의하시면 좋을 듯 합니다. 개인정보 수정 페이지 css 일부 수정했습니다.

--- a/boramjul/css/mypage.css
+++ b/boramjul/css/mypage.css
@@ -354,7 +354,6 @@ a{
 #info_box{
     border: solid 1px #A1A1A1;
     width: 45%;
-    height: 1200px;
     display: inline-block;
     margin: 1% 10%;
 }
@@ -385,6 +384,7 @@ a{
     width: 370px;
     height: 75px;
     font-size: 36px;
+    margin-bottom: 100px;
 }
 #point_system{
     font-size: 25px;
