--- a/황지현/css/layout.css
+++ b/황지현/css/layout.css
@@ -34,6 +34,7 @@ a{
 
 input{
     outline:none;
+    padding: 0 10px;
 }
 
 button{
@@ -187,6 +188,11 @@ button{
     border-bottom: 1px solid #A1A1A1;
     padding-bottom: 30px;
 }
+.map ul li {
+    font-size: 20px;
+    padding-bottom: 5px;
+    color: #666;
+}
 .map_area {
     width: 100%;
     border: 1px solid #ddd;
@@ -290,6 +296,18 @@ button{
 }
 .shipping_address table tbody tr td .add_01 {
     padding-bottom: 10px;
+}
+.shipping_address table tbody tr td .inner {
+    display: flex;
+    align-items: center;
+}
+.shipping_address table tbody tr td .inner .choice {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+.shipping_address table tbody tr td .inner .choice label {
+    margin:0 5px;
 }
 
 
@@ -443,12 +461,13 @@ button{
 
 }
 .complete_wrap .btnset  {
+    display: flex;
+    justify-content: center;
     text-align: center;
     padding-top: 50px;
 
 }
-.complete_wrap button.order_search  {
-    width: 235px;
+.complete_wrap .order_search  {
     height: 65px;
     line-height: 65px;
     display: inline-block;
@@ -458,8 +477,8 @@ button{
     border: 1px solid #000;
     color: #fff;
     border-radius: 10px;
-    padding:0 20px;
-
+    padding:0 40px;
+    margin: 0 20px;
 }
 
 
