--- a/JW-Boramjul_Books&Reviews/css/PagesForBooks.css
+++ b/JW-Boramjul_Books&Reviews/css/PagesForBooks.css
@@ -683,6 +683,7 @@ ul{
   margin-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
+  padding-top: 20px;
   padding-bottom:20px;
   border-bottom: solid 1px black;
 }
