회원가입시 약관먼저
회원가입클릭시 약관먼저 뜨게 바꿨습니다!

--- a/boramjul/include/header.html
+++ b/boramjul/include/header.html
@@ -286,7 +286,7 @@
         <div id="top_menu">
             <ul>
                 <li><a href="../member/login.html" class="topmenu">로그인</a></li>
-                <li><a href="../member/join.html" class="topmenu">회원가입</a></li>
+                <li><a href="../member/join1_1.html" class="topmenu">회원가입</a></li>
                 <li><a href="../mypage/mycart.html" class="topmenu">카트</a></li>
                 <li><a href="../etc/event.html" class="topmenu">이벤트</a></li>
                 <li><a href="../etc/QnA.html" class="topmenu">고객센터</a></li>
