main.jsp와 연결되는 maincontroller
servlet-context에 resources 부분 보시고 저대로 폴더 만들 때 마다 추가하셔야 맵핑이 됩니다. 꼭 추가하세요

--- a/boramjul/css/main.css
+++ b/boramjul/css/main.css
@@ -225,14 +225,20 @@ li.current {
 }
 
 #best-back img{
-    width: 100%;
+    width: 25%;
+}
+#best2{
+    margin-left: 100px;
+}
+#best3{
+    margin-left: 100px;
 }
 
 #new-container{
     position: relative;
 }
 
-#new-back #bookImg img{
+#new-back img{
     width: 17%;
     height: 7%;
 }
