메인 및 연동

--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
@@ -226,7 +226,9 @@ li.current {
 }
 
 #best-back img{
-    width: 25%;
+    width: 262px;
+    height: 375px;
+    padding: 10px;
 }
 #best2{
     margin-left: 100px;
