--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/main.css
@@ -4,6 +4,11 @@
     margin: 0;
     padding: 0;
 }
+a{
+	text-decoration:none;
+	color: black;
+	text-align: center;
+}
 
 @font-face {
     font-family: "gilroy";
