--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage2.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage2.css
@@ -154,6 +154,7 @@ p{
 }
 table{
     font-family: "nanum";
+  
 }
 button{
     appearance: none;
@@ -195,13 +196,7 @@ a{
 #myMenu{
     width: 20%;
     display: inline-block;
-
-}
-#myMenu ul,li{
-	list-style-type: none;
-	float: left;
-	marker: none;
-	text-align: center;
+    float: left;
 }
 #mypage{
     font-size: 64px;
@@ -236,7 +231,8 @@ a{
     height: 195px;
 }
 .table{
-    margin-left: 25%;
+	margin-top:70px;
+    margin-left: 10%;
 }
 .table table{
     border-collapse: collapse;
@@ -246,7 +242,7 @@ a{
 .table tr {
     border: solid 2px #A1A1A1;
     text-align:center;
-    height: 200px;
+    height: 120px;
     border-left: 0;
     border-right: 0;
 }
