로그인, 로그아웃시 메인화면 크롤링 안되던 부분 되도록 수정/ 크롤링 카테고리별로 jsp, controller 각각 있던 부분 스위치 문으로 변경/ ProductDTO 삭제 -> BooksDTO로 통일(그럼으로 mybatis-config.xml과 Productmapper의 result값 수정)/ 검색결과 화면에 검색어값 노출되도록 변경/ books 폴더 안 jsp파일 모두에 카테고리 메뉴 인크루드방식으로 변경/ 컨트롤러 영역 정리/
컨트롤러 영역 정리 -
MainController-> 메인화면 띄우는 용도만
BooksController -> 베스트샐러, 신간, 카테고리, 북리뷰 등등 상품 관련
AdminController -> 관리자 로그인, 공지글 작성
EtcController -> 주문, 지도, 이벤트, QnA
MemberController -> 로그인, 로그아웃, 가입, 정보찾기
MypageController -> 장바구니, 주문내역, 나의리뷰, 멤버쉽, 정보수정

--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/PagesForBooks.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/PagesForBooks.css
@@ -465,6 +465,7 @@ ul{
       margin:20px;
       position: relative;
     }
+    /*
 #search_text{
   width: 550px;
   height: 60px;
@@ -484,7 +485,7 @@ ul{
   vertical-align: middle;
   border: 0;
   box-shadow: none;
-}
+}*/
 .searched_bookimg{
   width: 175px;
   height: 250px;
