order관련 컨트롤러, 매퍼, model, jsp 수정
로그인, 회원정보수정 정규식 추가,
etc쪽에 있던 order를 mypage쪽으로 옮김
장바구니에서 체크한 책 리스트 조회
주소란에 기존정보사용/새로운 주문정보 입력 버튼 추가하여 '기존정보 사용' 누르면 기존 회원주소와 폰번호 매핑
cart_tot->order_tot로 받음
포인트 전체사용 버튼 누르면 포인트 전액이 input에 뜸,
포인트 사용금액과 랭크별 할인률에 따라 최종결제금액 변동,
결제창에서 입력한 데이터 컨트롤러로 전송,
result값 3으로 변경

--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/order.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/order.css
@@ -51,6 +51,18 @@ li,ol{
     width: 1000px;
     margin: 0 auto;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.payprice, .saleprice{
+	border:none;
+	width:60px;
+	height:40px;
+}
+
 .map{
 	margin-top:100px;
 	margin-bottom:400px;
@@ -130,17 +142,8 @@ li,ol{
     margin: 10px 0;
     width: 50px;
 }
-#address1{
+#address{
     margin: 10px 0;
-    border-bottom: solid 1px rgb(94, 94, 94);
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
-    width: 130px;
-}
-#address2{
-    margin-top: 0;
-    margin-bottom: 10px;
     border-bottom: solid 1px rgb(94, 94, 94);
     border-top: 0;
     border-left: 0;
@@ -151,20 +154,20 @@ li,ol{
     margin: 10px 0;
     width: 150px;
 }
-.inner{
+.inner, .del_radio{
     margin: 10px 0;
     display: flex;
     font-family: nanum;
 }
-
-.choice {
+.del_radio{
     display: flex;
-    margin-right: 20px;
-}
-.choice label{
-    margin-left: 5px;
+    flex-wrap: wrap;
 }
 
+.del_radio input, .add_radio input{
+	margin-left:20px;
+	margin-right:5px;
+}
 .payment_warp {
     position: relative;
     margin-top: 100px;
