order insert / order 구매 이후 상세페이지 / 주문내역조회
order와 카트기능 마무리 되었습니다. 둘 다 바로구매나 장바구니 담기는 detail 크롤링 끝난 이후 진행 예정입니다. 커밋하는데 혹시 잘못될까봐 zip파일도 함께 올립니다

--- a/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
+++ b/스프링작업자료/boramjul/src/main/webapp/WEB-INF/views/css/mypage.css
@@ -229,20 +229,24 @@ a{
     background-color: #664B8E;
     height: 195px;
 }
-.table{
+.table, .list_table{
     margin-left: 25%;
 }
-.table table{
+.table table, .list_table table{
     border-collapse: collapse;
     width: 90%;
     border-spacing: 0;
 }
-.table tr {
+.table tr, .list_table tr {
     border: solid 2px #A1A1A1;
     text-align:center;
     height: 190px;
     border-left: 0;
     border-right: 0;
+}
+.list_table tr td{
+	width:14%;
+	font-size:17px;
 }
 .table tr td{
     width: 15%;
